# multitude

kick/: kick.ino
ledder/: .gitignore  CMakeLists.txt  armenian32.hpp  emu.cpp  encoder.hpp  font.hpp  ledder.ino  pgm.hpp  platformio.ini  scene.hpp
ledder/fonts/: armenian-16.bdf  armenian-32.bdf
ledder/math/: fp.hpp  inv.hpp  rot.hpp  sin-table.hpp  sin.hpp  sqrt.hpp  vec.hpp
ledder/scripts/: bdf2bmh.py  numerals.txt
ledder/src/: glsl.h  ledder.cpp
udochka/: udochka.ino
udochka_2/: udochka_2.ino
uley/: uley.ino
